prior to splitting the taxon model